[package]
name = "cello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
async-std = "1.12.0"
druid = { git = "https://github.com/linebender/druid" }
rand = "0.8.5"
uuid = { version = "1.2.2", features = ["v4"] }
